// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contentHandler buildContentPart should build buffer of bytes 1`] = `
"Label: value; attrName="attrValue"

TG9yZW0gaXBzdW0gZG9sb3Igc2l0IGFtZXQsIGNvbnNlY3RldHVyIGFkaXBpc2NpbmcgZWxpdCwg
c2VkIGRvIGVpdXNtb2QgdGVtcG9yIGluY2lkaWR1bnQgdXQgbGFib3JlIGV0IGRvbG9yZSBtYWdu
YSBhbGlxdWEuIEVsaXQgdWxsYW1jb3JwZXIgZGlnbmlzc2ltIGNyYXMgdGluY2lkdW50IGxvYm9y
dGlzIGZldWdpYXQgdml2YW11cyBhdC4gQmxhbmRpdCBhbGlxdWFtIGV0aWFtIGVyYXQgdmVsaXQg
c2NlbGVyaXNxdWUgaW4gZGljdHVtIG5vbi4gU2VkIHZpdmVycmEgdGVsbHVzIGluIGhhYyBoYWJp
dGFzc2UgcGxhdGVhIGRpY3R1bXN0IHZlc3RpYnVsdW0uIE5pYmggdGVsbHVzIG1vbGVzdGllIG51
bmMgbm9uLiBJZCBsZW8gaW4gdml0YWUgdHVycGlzIG1hc3NhIHNlZCBlbGVtZW50dW0gdGVtcHVz
LiBBbnRlIG1ldHVzIGRpY3R1bSBhdCB0ZW1wb3IgY29tbW9kbyB1bGxhbWNvcnBlciBhIGxhY3Vz
IHZlc3RpYnVsdW0uIE5vbiBvZGlvIGV1aXNtb2QgbGFjaW5pYSBhdCBxdWlzIHJpc3VzIHNlZC4g
SW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jIHB1bHZpbmFyLiBFc3QgYW50ZSBpbiBuaWJo
IG1hdXJpcy4gQ3Vyc3VzIGV1aXNtb2QgcXVpcyB2aXZlcnJhIG5pYmggY3Jhcy4gRHVpcyBhdCB0
ZWxsdXMgYXQgdXJuYSBjb25kaW1lbnR1bSBtYXR0aXMgcGVsbGVudGVzcXVlLiBBbWV0IG1hdXJp
cyBjb21tb2RvIHF1aXMgaW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jLiBWaXRhZSBjb25n
dWUgbWF1cmlzIHJob25jdXMgYWVuZWFuIHZlbCBlbGl0IHNjZWxlcmlzcXVlIG1hdXJpcy4="
`;

exports[`contentHandler buildContentPart should build pre-encoded base64 content 1`] = `
"Label1: value1; attrKey1="attrValue1"

TG9yZW0gaXBzdW0gZG9sb3Igc2l0IGFtZXQsIGNvbnNlY3RldHVyIGFkaXBpc2NpbmcgZWxpdCwg
c2VkIGRvIGVpdXNtb2QgdGVtcG9yIGluY2lkaWR1bnQgdXQgbGFib3JlIGV0IGRvbG9yZSBtYWdu
YSBhbGlxdWEuIEVsaXQgdWxsYW1jb3JwZXIgZGlnbmlzc2ltIGNyYXMgdGluY2lkdW50IGxvYm9y
dGlzIGZldWdpYXQgdml2YW11cyBhdC4gQmxhbmRpdCBhbGlxdWFtIGV0aWFtIGVyYXQgdmVsaXQg
c2NlbGVyaXNxdWUgaW4gZGljdHVtIG5vbi4gU2VkIHZpdmVycmEgdGVsbHVzIGluIGhhYyBoYWJp
dGFzc2UgcGxhdGVhIGRpY3R1bXN0IHZlc3RpYnVsdW0uIE5pYmggdGVsbHVzIG1vbGVzdGllIG51
bmMgbm9uLiBJZCBsZW8gaW4gdml0YWUgdHVycGlzIG1hc3NhIHNlZCBlbGVtZW50dW0gdGVtcHVz
LiBBbnRlIG1ldHVzIGRpY3R1bSBhdCB0ZW1wb3IgY29tbW9kbyB1bGxhbWNvcnBlciBhIGxhY3Vz
IHZlc3RpYnVsdW0uIE5vbiBvZGlvIGV1aXNtb2QgbGFjaW5pYSBhdCBxdWlzIHJpc3VzIHNlZC4g
SW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jIHB1bHZpbmFyLiBFc3QgYW50ZSBpbiBuaWJo
IG1hdXJpcy4gQ3Vyc3VzIGV1aXNtb2QgcXVpcyB2aXZlcnJhIG5pYmggY3Jhcy4gRHVpcyBhdCB0
ZWxsdXMgYXQgdXJuYSBjb25kaW1lbnR1bSBtYXR0aXMgcGVsbGVudGVzcXVlLiBBbWV0IG1hdXJp
cyBjb21tb2RvIHF1aXMgaW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jLiBWaXRhZSBjb25n
dWUgbWF1cmlzIHJob25jdXMgYWVuZWFuIHZlbCBlbGl0IHNjZWxlcmlzcXVlIG1hdXJpcy4="
`;

exports[`contentHandler buildContentParts should build multiple parts with boundary 1`] = `
"--AQID
Label1: value1; attrKey1="attrValue1"

TG9yZW0gaXBzdW0gZG9sb3Igc2l0IGFtZXQsIGNvbnNlY3RldHVyIGFkaXBpc2NpbmcgZWxpdCwg
c2VkIGRvIGVpdXNtb2QgdGVtcG9yIGluY2lkaWR1bnQgdXQgbGFib3JlIGV0IGRvbG9yZSBtYWdu
YSBhbGlxdWEuIEVsaXQgdWxsYW1jb3JwZXIgZGlnbmlzc2ltIGNyYXMgdGluY2lkdW50IGxvYm9y
dGlzIGZldWdpYXQgdml2YW11cyBhdC4gQmxhbmRpdCBhbGlxdWFtIGV0aWFtIGVyYXQgdmVsaXQg
c2NlbGVyaXNxdWUgaW4gZGljdHVtIG5vbi4gU2VkIHZpdmVycmEgdGVsbHVzIGluIGhhYyBoYWJp
dGFzc2UgcGxhdGVhIGRpY3R1bXN0IHZlc3RpYnVsdW0uIE5pYmggdGVsbHVzIG1vbGVzdGllIG51
bmMgbm9uLiBJZCBsZW8gaW4gdml0YWUgdHVycGlzIG1hc3NhIHNlZCBlbGVtZW50dW0gdGVtcHVz
LiBBbnRlIG1ldHVzIGRpY3R1bSBhdCB0ZW1wb3IgY29tbW9kbyB1bGxhbWNvcnBlciBhIGxhY3Vz
IHZlc3RpYnVsdW0uIE5vbiBvZGlvIGV1aXNtb2QgbGFjaW5pYSBhdCBxdWlzIHJpc3VzIHNlZC4g
SW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jIHB1bHZpbmFyLiBFc3QgYW50ZSBpbiBuaWJo
IG1hdXJpcy4gQ3Vyc3VzIGV1aXNtb2QgcXVpcyB2aXZlcnJhIG5pYmggY3Jhcy4gRHVpcyBhdCB0
ZWxsdXMgYXQgdXJuYSBjb25kaW1lbnR1bSBtYXR0aXMgcGVsbGVudGVzcXVlLiBBbWV0IG1hdXJp
cyBjb21tb2RvIHF1aXMgaW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jLiBWaXRhZSBjb25n
dWUgbWF1cmlzIHJob25jdXMgYWVuZWFuIHZlbCBlbGl0IHNjZWxlcmlzcXVlIG1hdXJpcy4=
--AQID
Label2: Value2; atrrKey2="attrValue2"

TmVxdWUgc29kYWxlcyB1dCBldGlhbSBzaXQuIEV0IGVnZXN0YXMgcXVpcyBpcHN1bSBzdXNwZW5k
aXNzZS4gU2NlbGVyaXNxdWUgZmVsaXMgaW1wZXJkaWV0IHByb2luIGZlcm1lbnR1bSBsZW8uIE5l
cXVlIGNvbnZhbGxpcyBhIGNyYXMgc2VtcGVyIGF1Y3RvciBuZXF1ZSB2aXRhZSB0ZW1wdXMuIExp
YmVybyB2b2x1dHBhdCBzZWQgY3JhcyBvcm5hcmUgYXJjdSBkdWkgdml2YW11cyBhcmN1IGZlbGlz
LiBJbiBuaXNsIG5pc2kgc2NlbGVyaXNxdWUgZXUgdWx0cmljZXMgdml0YWUgYXVjdG9yLiBJbiBl
dSBtaSBiaWJlbmR1bSBuZXF1ZSBlZ2VzdGFzLiBTZWQgdGVtcHVzIHVybmEgZXQgcGhhcmV0cmEg
cGhhcmV0cmEgbWFzc2EgbWFzc2EuIEF1Z3VlIGxhY3VzIHZpdmVycmEgdml0YWUgY29uZ3VlIGV1
IGNvbnNlcXVhdCBhYyBmZWxpcy4gUGVsbGVudGVzcXVlIGRpYW0gdm9sdXRwYXQgY29tbW9kbyBz
ZWQgZWdlc3RhcyBlZ2VzdGFzLiBEb25lYyBwcmV0aXVtIHZ1bHB1dGF0ZSBzYXBpZW4gbmVjIHNh
Z2l0dGlzIGFsaXF1YW0gbWFsZXN1YWRhIGJpYmVuZHVtLiBBbWV0IGp1c3RvIGRvbmVjIGVuaW0g
ZGlhbSB2dWxwdXRhdGUgdXQgcGhhcmV0cmEu
--AQID"
`;

exports[`contentHandler buildContentParts should build single part with boundary 1`] = `
"--AQID
Label1: value1; attrKey1="attrValue1"

TG9yZW0gaXBzdW0gZG9sb3Igc2l0IGFtZXQsIGNvbnNlY3RldHVyIGFkaXBpc2NpbmcgZWxpdCwg
c2VkIGRvIGVpdXNtb2QgdGVtcG9yIGluY2lkaWR1bnQgdXQgbGFib3JlIGV0IGRvbG9yZSBtYWdu
YSBhbGlxdWEuIEVsaXQgdWxsYW1jb3JwZXIgZGlnbmlzc2ltIGNyYXMgdGluY2lkdW50IGxvYm9y
dGlzIGZldWdpYXQgdml2YW11cyBhdC4gQmxhbmRpdCBhbGlxdWFtIGV0aWFtIGVyYXQgdmVsaXQg
c2NlbGVyaXNxdWUgaW4gZGljdHVtIG5vbi4gU2VkIHZpdmVycmEgdGVsbHVzIGluIGhhYyBoYWJp
dGFzc2UgcGxhdGVhIGRpY3R1bXN0IHZlc3RpYnVsdW0uIE5pYmggdGVsbHVzIG1vbGVzdGllIG51
bmMgbm9uLiBJZCBsZW8gaW4gdml0YWUgdHVycGlzIG1hc3NhIHNlZCBlbGVtZW50dW0gdGVtcHVz
LiBBbnRlIG1ldHVzIGRpY3R1bSBhdCB0ZW1wb3IgY29tbW9kbyB1bGxhbWNvcnBlciBhIGxhY3Vz
IHZlc3RpYnVsdW0uIE5vbiBvZGlvIGV1aXNtb2QgbGFjaW5pYSBhdCBxdWlzIHJpc3VzIHNlZC4g
SW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jIHB1bHZpbmFyLiBFc3QgYW50ZSBpbiBuaWJo
IG1hdXJpcy4gQ3Vyc3VzIGV1aXNtb2QgcXVpcyB2aXZlcnJhIG5pYmggY3Jhcy4gRHVpcyBhdCB0
ZWxsdXMgYXQgdXJuYSBjb25kaW1lbnR1bSBtYXR0aXMgcGVsbGVudGVzcXVlLiBBbWV0IG1hdXJp
cyBjb21tb2RvIHF1aXMgaW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jLiBWaXRhZSBjb25n
dWUgbWF1cmlzIHJob25jdXMgYWVuZWFuIHZlbCBlbGl0IHNjZWxlcmlzcXVlIG1hdXJpcy4=
--AQID"
`;

exports[`contentHandler buildContentParts should build single part without boundary 1`] = `
"Label1: value1; attrKey1="attrValue1"

TG9yZW0gaXBzdW0gZG9sb3Igc2l0IGFtZXQsIGNvbnNlY3RldHVyIGFkaXBpc2NpbmcgZWxpdCwg
c2VkIGRvIGVpdXNtb2QgdGVtcG9yIGluY2lkaWR1bnQgdXQgbGFib3JlIGV0IGRvbG9yZSBtYWdu
YSBhbGlxdWEuIEVsaXQgdWxsYW1jb3JwZXIgZGlnbmlzc2ltIGNyYXMgdGluY2lkdW50IGxvYm9y
dGlzIGZldWdpYXQgdml2YW11cyBhdC4gQmxhbmRpdCBhbGlxdWFtIGV0aWFtIGVyYXQgdmVsaXQg
c2NlbGVyaXNxdWUgaW4gZGljdHVtIG5vbi4gU2VkIHZpdmVycmEgdGVsbHVzIGluIGhhYyBoYWJp
dGFzc2UgcGxhdGVhIGRpY3R1bXN0IHZlc3RpYnVsdW0uIE5pYmggdGVsbHVzIG1vbGVzdGllIG51
bmMgbm9uLiBJZCBsZW8gaW4gdml0YWUgdHVycGlzIG1hc3NhIHNlZCBlbGVtZW50dW0gdGVtcHVz
LiBBbnRlIG1ldHVzIGRpY3R1bSBhdCB0ZW1wb3IgY29tbW9kbyB1bGxhbWNvcnBlciBhIGxhY3Vz
IHZlc3RpYnVsdW0uIE5vbiBvZGlvIGV1aXNtb2QgbGFjaW5pYSBhdCBxdWlzIHJpc3VzIHNlZC4g
SW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jIHB1bHZpbmFyLiBFc3QgYW50ZSBpbiBuaWJo
IG1hdXJpcy4gQ3Vyc3VzIGV1aXNtb2QgcXVpcyB2aXZlcnJhIG5pYmggY3Jhcy4gRHVpcyBhdCB0
ZWxsdXMgYXQgdXJuYSBjb25kaW1lbnR1bSBtYXR0aXMgcGVsbGVudGVzcXVlLiBBbWV0IG1hdXJp
cyBjb21tb2RvIHF1aXMgaW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jLiBWaXRhZSBjb25n
dWUgbWF1cmlzIHJob25jdXMgYWVuZWFuIHZlbCBlbGl0IHNjZWxlcmlzcXVlIG1hdXJpcy4="
`;

exports[`contentHandler buildMessageAndAttachments should build just message with alternative content 1`] = `
"--AQID
Label1: value1; attrKey1="attrValue1"

TG9yZW0gaXBzdW0gZG9sb3Igc2l0IGFtZXQsIGNvbnNlY3RldHVyIGFkaXBpc2NpbmcgZWxpdCwg
c2VkIGRvIGVpdXNtb2QgdGVtcG9yIGluY2lkaWR1bnQgdXQgbGFib3JlIGV0IGRvbG9yZSBtYWdu
YSBhbGlxdWEuIEVsaXQgdWxsYW1jb3JwZXIgZGlnbmlzc2ltIGNyYXMgdGluY2lkdW50IGxvYm9y
dGlzIGZldWdpYXQgdml2YW11cyBhdC4gQmxhbmRpdCBhbGlxdWFtIGV0aWFtIGVyYXQgdmVsaXQg
c2NlbGVyaXNxdWUgaW4gZGljdHVtIG5vbi4gU2VkIHZpdmVycmEgdGVsbHVzIGluIGhhYyBoYWJp
dGFzc2UgcGxhdGVhIGRpY3R1bXN0IHZlc3RpYnVsdW0uIE5pYmggdGVsbHVzIG1vbGVzdGllIG51
bmMgbm9uLiBJZCBsZW8gaW4gdml0YWUgdHVycGlzIG1hc3NhIHNlZCBlbGVtZW50dW0gdGVtcHVz
LiBBbnRlIG1ldHVzIGRpY3R1bSBhdCB0ZW1wb3IgY29tbW9kbyB1bGxhbWNvcnBlciBhIGxhY3Vz
IHZlc3RpYnVsdW0uIE5vbiBvZGlvIGV1aXNtb2QgbGFjaW5pYSBhdCBxdWlzIHJpc3VzIHNlZC4g
SW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jIHB1bHZpbmFyLiBFc3QgYW50ZSBpbiBuaWJo
IG1hdXJpcy4gQ3Vyc3VzIGV1aXNtb2QgcXVpcyB2aXZlcnJhIG5pYmggY3Jhcy4gRHVpcyBhdCB0
ZWxsdXMgYXQgdXJuYSBjb25kaW1lbnR1bSBtYXR0aXMgcGVsbGVudGVzcXVlLiBBbWV0IG1hdXJp
cyBjb21tb2RvIHF1aXMgaW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jLiBWaXRhZSBjb25n
dWUgbWF1cmlzIHJob25jdXMgYWVuZWFuIHZlbCBlbGl0IHNjZWxlcmlzcXVlIG1hdXJpcy4=
--AQID
Label2: Value2; atrrKey2="attrValue2"

TmVxdWUgc29kYWxlcyB1dCBldGlhbSBzaXQuIEV0IGVnZXN0YXMgcXVpcyBpcHN1bSBzdXNwZW5k
aXNzZS4gU2NlbGVyaXNxdWUgZmVsaXMgaW1wZXJkaWV0IHByb2luIGZlcm1lbnR1bSBsZW8uIE5l
cXVlIGNvbnZhbGxpcyBhIGNyYXMgc2VtcGVyIGF1Y3RvciBuZXF1ZSB2aXRhZSB0ZW1wdXMuIExp
YmVybyB2b2x1dHBhdCBzZWQgY3JhcyBvcm5hcmUgYXJjdSBkdWkgdml2YW11cyBhcmN1IGZlbGlz
LiBJbiBuaXNsIG5pc2kgc2NlbGVyaXNxdWUgZXUgdWx0cmljZXMgdml0YWUgYXVjdG9yLiBJbiBl
dSBtaSBiaWJlbmR1bSBuZXF1ZSBlZ2VzdGFzLiBTZWQgdGVtcHVzIHVybmEgZXQgcGhhcmV0cmEg
cGhhcmV0cmEgbWFzc2EgbWFzc2EuIEF1Z3VlIGxhY3VzIHZpdmVycmEgdml0YWUgY29uZ3VlIGV1
IGNvbnNlcXVhdCBhYyBmZWxpcy4gUGVsbGVudGVzcXVlIGRpYW0gdm9sdXRwYXQgY29tbW9kbyBz
ZWQgZWdlc3RhcyBlZ2VzdGFzLiBEb25lYyBwcmV0aXVtIHZ1bHB1dGF0ZSBzYXBpZW4gbmVjIHNh
Z2l0dGlzIGFsaXF1YW0gbWFsZXN1YWRhIGJpYmVuZHVtLiBBbWV0IGp1c3RvIGRvbmVjIGVuaW0g
ZGlhbSB2dWxwdXRhdGUgdXQgcGhhcmV0cmEu
--AQID"
`;

exports[`contentHandler buildMessageAndAttachments should build just single message part without boundary 1`] = `
"Label1: value1; attrKey1="attrValue1"

TG9yZW0gaXBzdW0gZG9sb3Igc2l0IGFtZXQsIGNvbnNlY3RldHVyIGFkaXBpc2NpbmcgZWxpdCwg
c2VkIGRvIGVpdXNtb2QgdGVtcG9yIGluY2lkaWR1bnQgdXQgbGFib3JlIGV0IGRvbG9yZSBtYWdu
YSBhbGlxdWEuIEVsaXQgdWxsYW1jb3JwZXIgZGlnbmlzc2ltIGNyYXMgdGluY2lkdW50IGxvYm9y
dGlzIGZldWdpYXQgdml2YW11cyBhdC4gQmxhbmRpdCBhbGlxdWFtIGV0aWFtIGVyYXQgdmVsaXQg
c2NlbGVyaXNxdWUgaW4gZGljdHVtIG5vbi4gU2VkIHZpdmVycmEgdGVsbHVzIGluIGhhYyBoYWJp
dGFzc2UgcGxhdGVhIGRpY3R1bXN0IHZlc3RpYnVsdW0uIE5pYmggdGVsbHVzIG1vbGVzdGllIG51
bmMgbm9uLiBJZCBsZW8gaW4gdml0YWUgdHVycGlzIG1hc3NhIHNlZCBlbGVtZW50dW0gdGVtcHVz
LiBBbnRlIG1ldHVzIGRpY3R1bSBhdCB0ZW1wb3IgY29tbW9kbyB1bGxhbWNvcnBlciBhIGxhY3Vz
IHZlc3RpYnVsdW0uIE5vbiBvZGlvIGV1aXNtb2QgbGFjaW5pYSBhdCBxdWlzIHJpc3VzIHNlZC4g
SW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jIHB1bHZpbmFyLiBFc3QgYW50ZSBpbiBuaWJo
IG1hdXJpcy4gQ3Vyc3VzIGV1aXNtb2QgcXVpcyB2aXZlcnJhIG5pYmggY3Jhcy4gRHVpcyBhdCB0
ZWxsdXMgYXQgdXJuYSBjb25kaW1lbnR1bSBtYXR0aXMgcGVsbGVudGVzcXVlLiBBbWV0IG1hdXJp
cyBjb21tb2RvIHF1aXMgaW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jLiBWaXRhZSBjb25n
dWUgbWF1cmlzIHJob25jdXMgYWVuZWFuIHZlbCBlbGl0IHNjZWxlcmlzcXVlIG1hdXJpcy4="
`;

exports[`contentHandler buildMessageAndAttachments should build message and attachment with alternative content 1`] = `
"--BAUG
Content-Type: multipart/alternative; boundary="AQID"

--AQID
Label1: value1; attrKey1="attrValue1"

TG9yZW0gaXBzdW0gZG9sb3Igc2l0IGFtZXQsIGNvbnNlY3RldHVyIGFkaXBpc2NpbmcgZWxpdCwg
c2VkIGRvIGVpdXNtb2QgdGVtcG9yIGluY2lkaWR1bnQgdXQgbGFib3JlIGV0IGRvbG9yZSBtYWdu
YSBhbGlxdWEuIEVsaXQgdWxsYW1jb3JwZXIgZGlnbmlzc2ltIGNyYXMgdGluY2lkdW50IGxvYm9y
dGlzIGZldWdpYXQgdml2YW11cyBhdC4gQmxhbmRpdCBhbGlxdWFtIGV0aWFtIGVyYXQgdmVsaXQg
c2NlbGVyaXNxdWUgaW4gZGljdHVtIG5vbi4gU2VkIHZpdmVycmEgdGVsbHVzIGluIGhhYyBoYWJp
dGFzc2UgcGxhdGVhIGRpY3R1bXN0IHZlc3RpYnVsdW0uIE5pYmggdGVsbHVzIG1vbGVzdGllIG51
bmMgbm9uLiBJZCBsZW8gaW4gdml0YWUgdHVycGlzIG1hc3NhIHNlZCBlbGVtZW50dW0gdGVtcHVz
LiBBbnRlIG1ldHVzIGRpY3R1bSBhdCB0ZW1wb3IgY29tbW9kbyB1bGxhbWNvcnBlciBhIGxhY3Vz
IHZlc3RpYnVsdW0uIE5vbiBvZGlvIGV1aXNtb2QgbGFjaW5pYSBhdCBxdWlzIHJpc3VzIHNlZC4g
SW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jIHB1bHZpbmFyLiBFc3QgYW50ZSBpbiBuaWJo
IG1hdXJpcy4gQ3Vyc3VzIGV1aXNtb2QgcXVpcyB2aXZlcnJhIG5pYmggY3Jhcy4gRHVpcyBhdCB0
ZWxsdXMgYXQgdXJuYSBjb25kaW1lbnR1bSBtYXR0aXMgcGVsbGVudGVzcXVlLiBBbWV0IG1hdXJp
cyBjb21tb2RvIHF1aXMgaW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jLiBWaXRhZSBjb25n
dWUgbWF1cmlzIHJob25jdXMgYWVuZWFuIHZlbCBlbGl0IHNjZWxlcmlzcXVlIG1hdXJpcy4=
--AQID
Label1: value1; attrKey1="attrValue1"

TG9yZW0gaXBzdW0gZG9sb3Igc2l0IGFtZXQsIGNvbnNlY3RldHVyIGFkaXBpc2NpbmcgZWxpdCwg
c2VkIGRvIGVpdXNtb2QgdGVtcG9yIGluY2lkaWR1bnQgdXQgbGFib3JlIGV0IGRvbG9yZSBtYWdu
YSBhbGlxdWEuIEVsaXQgdWxsYW1jb3JwZXIgZGlnbmlzc2ltIGNyYXMgdGluY2lkdW50IGxvYm9y
dGlzIGZldWdpYXQgdml2YW11cyBhdC4gQmxhbmRpdCBhbGlxdWFtIGV0aWFtIGVyYXQgdmVsaXQg
c2NlbGVyaXNxdWUgaW4gZGljdHVtIG5vbi4gU2VkIHZpdmVycmEgdGVsbHVzIGluIGhhYyBoYWJp
dGFzc2UgcGxhdGVhIGRpY3R1bXN0IHZlc3RpYnVsdW0uIE5pYmggdGVsbHVzIG1vbGVzdGllIG51
bmMgbm9uLiBJZCBsZW8gaW4gdml0YWUgdHVycGlzIG1hc3NhIHNlZCBlbGVtZW50dW0gdGVtcHVz
LiBBbnRlIG1ldHVzIGRpY3R1bSBhdCB0ZW1wb3IgY29tbW9kbyB1bGxhbWNvcnBlciBhIGxhY3Vz
IHZlc3RpYnVsdW0uIE5vbiBvZGlvIGV1aXNtb2QgbGFjaW5pYSBhdCBxdWlzIHJpc3VzIHNlZC4g
SW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jIHB1bHZpbmFyLiBFc3QgYW50ZSBpbiBuaWJo
IG1hdXJpcy4gQ3Vyc3VzIGV1aXNtb2QgcXVpcyB2aXZlcnJhIG5pYmggY3Jhcy4gRHVpcyBhdCB0
ZWxsdXMgYXQgdXJuYSBjb25kaW1lbnR1bSBtYXR0aXMgcGVsbGVudGVzcXVlLiBBbWV0IG1hdXJp
cyBjb21tb2RvIHF1aXMgaW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jLiBWaXRhZSBjb25n
dWUgbWF1cmlzIHJob25jdXMgYWVuZWFuIHZlbCBlbGl0IHNjZWxlcmlzcXVlIG1hdXJpcy4=
--AQID
--BAUG
Label2: Value2; atrrKey2="attrValue2"

TmVxdWUgc29kYWxlcyB1dCBldGlhbSBzaXQuIEV0IGVnZXN0YXMgcXVpcyBpcHN1bSBzdXNwZW5k
aXNzZS4gU2NlbGVyaXNxdWUgZmVsaXMgaW1wZXJkaWV0IHByb2luIGZlcm1lbnR1bSBsZW8uIE5l
cXVlIGNvbnZhbGxpcyBhIGNyYXMgc2VtcGVyIGF1Y3RvciBuZXF1ZSB2aXRhZSB0ZW1wdXMuIExp
YmVybyB2b2x1dHBhdCBzZWQgY3JhcyBvcm5hcmUgYXJjdSBkdWkgdml2YW11cyBhcmN1IGZlbGlz
LiBJbiBuaXNsIG5pc2kgc2NlbGVyaXNxdWUgZXUgdWx0cmljZXMgdml0YWUgYXVjdG9yLiBJbiBl
dSBtaSBiaWJlbmR1bSBuZXF1ZSBlZ2VzdGFzLiBTZWQgdGVtcHVzIHVybmEgZXQgcGhhcmV0cmEg
cGhhcmV0cmEgbWFzc2EgbWFzc2EuIEF1Z3VlIGxhY3VzIHZpdmVycmEgdml0YWUgY29uZ3VlIGV1
IGNvbnNlcXVhdCBhYyBmZWxpcy4gUGVsbGVudGVzcXVlIGRpYW0gdm9sdXRwYXQgY29tbW9kbyBz
ZWQgZWdlc3RhcyBlZ2VzdGFzLiBEb25lYyBwcmV0aXVtIHZ1bHB1dGF0ZSBzYXBpZW4gbmVjIHNh
Z2l0dGlzIGFsaXF1YW0gbWFsZXN1YWRhIGJpYmVuZHVtLiBBbWV0IGp1c3RvIGRvbmVjIGVuaW0g
ZGlhbSB2dWxwdXRhdGUgdXQgcGhhcmV0cmEu
--BAUG"
`;

exports[`contentHandler buildMessageAndAttachments should build message and attachment without alternative content 1`] = `
"--AQID
Label1: value1; attrKey1="attrValue1"

TG9yZW0gaXBzdW0gZG9sb3Igc2l0IGFtZXQsIGNvbnNlY3RldHVyIGFkaXBpc2NpbmcgZWxpdCwg
c2VkIGRvIGVpdXNtb2QgdGVtcG9yIGluY2lkaWR1bnQgdXQgbGFib3JlIGV0IGRvbG9yZSBtYWdu
YSBhbGlxdWEuIEVsaXQgdWxsYW1jb3JwZXIgZGlnbmlzc2ltIGNyYXMgdGluY2lkdW50IGxvYm9y
dGlzIGZldWdpYXQgdml2YW11cyBhdC4gQmxhbmRpdCBhbGlxdWFtIGV0aWFtIGVyYXQgdmVsaXQg
c2NlbGVyaXNxdWUgaW4gZGljdHVtIG5vbi4gU2VkIHZpdmVycmEgdGVsbHVzIGluIGhhYyBoYWJp
dGFzc2UgcGxhdGVhIGRpY3R1bXN0IHZlc3RpYnVsdW0uIE5pYmggdGVsbHVzIG1vbGVzdGllIG51
bmMgbm9uLiBJZCBsZW8gaW4gdml0YWUgdHVycGlzIG1hc3NhIHNlZCBlbGVtZW50dW0gdGVtcHVz
LiBBbnRlIG1ldHVzIGRpY3R1bSBhdCB0ZW1wb3IgY29tbW9kbyB1bGxhbWNvcnBlciBhIGxhY3Vz
IHZlc3RpYnVsdW0uIE5vbiBvZGlvIGV1aXNtb2QgbGFjaW5pYSBhdCBxdWlzIHJpc3VzIHNlZC4g
SW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jIHB1bHZpbmFyLiBFc3QgYW50ZSBpbiBuaWJo
IG1hdXJpcy4gQ3Vyc3VzIGV1aXNtb2QgcXVpcyB2aXZlcnJhIG5pYmggY3Jhcy4gRHVpcyBhdCB0
ZWxsdXMgYXQgdXJuYSBjb25kaW1lbnR1bSBtYXR0aXMgcGVsbGVudGVzcXVlLiBBbWV0IG1hdXJp
cyBjb21tb2RvIHF1aXMgaW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jLiBWaXRhZSBjb25n
dWUgbWF1cmlzIHJob25jdXMgYWVuZWFuIHZlbCBlbGl0IHNjZWxlcmlzcXVlIG1hdXJpcy4=
--AQID
Label1: value1; attrKey1="attrValue1"

TG9yZW0gaXBzdW0gZG9sb3Igc2l0IGFtZXQsIGNvbnNlY3RldHVyIGFkaXBpc2NpbmcgZWxpdCwg
c2VkIGRvIGVpdXNtb2QgdGVtcG9yIGluY2lkaWR1bnQgdXQgbGFib3JlIGV0IGRvbG9yZSBtYWdu
YSBhbGlxdWEuIEVsaXQgdWxsYW1jb3JwZXIgZGlnbmlzc2ltIGNyYXMgdGluY2lkdW50IGxvYm9y
dGlzIGZldWdpYXQgdml2YW11cyBhdC4gQmxhbmRpdCBhbGlxdWFtIGV0aWFtIGVyYXQgdmVsaXQg
c2NlbGVyaXNxdWUgaW4gZGljdHVtIG5vbi4gU2VkIHZpdmVycmEgdGVsbHVzIGluIGhhYyBoYWJp
dGFzc2UgcGxhdGVhIGRpY3R1bXN0IHZlc3RpYnVsdW0uIE5pYmggdGVsbHVzIG1vbGVzdGllIG51
bmMgbm9uLiBJZCBsZW8gaW4gdml0YWUgdHVycGlzIG1hc3NhIHNlZCBlbGVtZW50dW0gdGVtcHVz
LiBBbnRlIG1ldHVzIGRpY3R1bSBhdCB0ZW1wb3IgY29tbW9kbyB1bGxhbWNvcnBlciBhIGxhY3Vz
IHZlc3RpYnVsdW0uIE5vbiBvZGlvIGV1aXNtb2QgbGFjaW5pYSBhdCBxdWlzIHJpc3VzIHNlZC4g
SW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jIHB1bHZpbmFyLiBFc3QgYW50ZSBpbiBuaWJo
IG1hdXJpcy4gQ3Vyc3VzIGV1aXNtb2QgcXVpcyB2aXZlcnJhIG5pYmggY3Jhcy4gRHVpcyBhdCB0
ZWxsdXMgYXQgdXJuYSBjb25kaW1lbnR1bSBtYXR0aXMgcGVsbGVudGVzcXVlLiBBbWV0IG1hdXJp
cyBjb21tb2RvIHF1aXMgaW1wZXJkaWV0IG1hc3NhIHRpbmNpZHVudCBudW5jLiBWaXRhZSBjb25n
dWUgbWF1cmlzIHJob25jdXMgYWVuZWFuIHZlbCBlbGl0IHNjZWxlcmlzcXVlIG1hdXJpcy4=
--AQID"
`;
